--- a/.github/actions/installansible/action.yml
+++ b/.github/actions/installansible/action.yml
@@ -56,14 +56,10 @@ runs:
         set -x
         echo ${{ inputs.extra_packages }}
         echo ${{ toJSON(inputs.extra_packages) }}
-        # assert json list
         packages=$(echo '[]' | jq -c ". += $ANSIBLE_EXTRA_PACKAGES")
-        packages=$(echo "$packages"| jq -c '. += ["_ansible==${{ matrix.ansible_version }}",
-                                               "ansible-lint",
-                                               "_ansible_test",
-                                               "flake8",
-                                               "antsibull-docs",
-                                               "rstcheck-core"]|tojson')
+        packages=$(echo "$ANSIBLE_EXTRA_PACKAGES"| jq -c '. += ["_ansible==${{ matrix.ansible_version }}",
+                          "ansible-lint", "_ansible_test", "flake8",
+                          "antsibull-docs", "rstcheck-core"]|tojson')
         echo Installing packages: "$packages"
         ansible-playbook -D playbooks/install-ansible.yml \
           -e "{\"virtualenv_packages\": $packages}" \
