--- a/.github/workflows/ci-ci.yml
+++ b/.github/workflows/ci-ci.yml
@@ -108,6 +108,8 @@ jobs:
     needs:
       - lint
       - selectbranch
+      - ansiblecollectioninfo
       - createansiblecollection
       - ansiblecollection
+      - molecule
 ...
