--- a/.github/actions/installansible/action.yml
+++ b/.github/actions/installansible/action.yml
@@ -60,7 +60,7 @@ runs:
                 "antsibull-docs", "rstcheck-core"]|tojson')
         echo Installing packages: "$packages"
         ansible-playbook -D playbooks/install-ansible.yml \
-          -e "{\"virtualenv_packages\": $packages}" \
+          -e "$virtualenv_packages" \
           -e "virtualenv_python=python${{ matrix.python_version }}" -t all,debug
 
     - name: check ansible version
