--- a/.github/actions/installansible/action.yml
+++ b/.github/actions/installansible/action.yml
@@ -53,10 +53,10 @@ runs:
         ANSIBLE_EXTRA_PACKAGES: ${{ inputs.extra_packages }}
       run: |
         set -x
-        virtualenv_packages=$(echo -e $ANSIBLE_EXTRA_PACKAGES|jq -cR '{"virtualenv_packages": split(",")}|.virtualenv_packages += ["_ansible==${{ matrix.ansible_version }}", "ansible-lint", "_ansible_test", "flake8", "antsibull-docs", "rstcheck-core"]|tojson')
+        virtualenv_packages=$(echo -e $ANSIBLE_EXTRA_PACKAGES|jq -crR {"virtualenv_packages": split(",")}|.virtualenv_packages += ["_ansible==${{ matrix.ansible_version }}", "ansible-lint", "_ansible_test", "flake8", "antsibull-docs", "rstcheck-core"])
         echo Installing packages: $packages
         ansible-playbook -D playbooks/install-ansible.yml \
-          -e $virtualenv_packages \
+          -e "'"$virtualenv_packages"'" \
           -e "virtualenv_python=python${{ matrix.python_version }}" -t all,debug
 
     - name: check ansible version
