--- a/.github/actions/installansible/action.yml
+++ b/.github/actions/installansible/action.yml
@@ -53,7 +53,10 @@ runs:
         ANSIBLE_EXTRA_PACKAGES: ${{ inputs.extra_packages }}
       run: |
         set -x
-        virtualenv_packages=$(echo -e $ANSIBLE_EXTRA_PACKAGES|jq -crR '{"virtualenv_packages": split(",")}|.virtualenv_packages += ["_ansible==${{ matrix.ansible_version }}", "ansible-lint", "_ansible_test", "flake8", "antsibull-docs", "rstcheck-core"]')
+        virtualenv_packages=$(echo -e $ANSIBLE_EXTRA_PACKAGES|\
+            jq -crR '{"virtualenv_packages": split(",")}|.virtualenv_packages += ["_ansible==${{ matrix.ansible_version }}",
+                                                                                  "ansible-lint", "_ansible_test", "flake8",
+                                                                                  "antsibull-docs", "rstcheck-core"]')
         echo Installing packages: $virtualenv_packages
         ansible-playbook -D playbooks/install-ansible.yml \
           -e $virtualenv_packages \
