--- a/.github/actions/ansiblecollectioninfo/action.yml
+++ b/.github/actions/ansiblecollectioninfo/action.yml
@@ -16,8 +16,10 @@ inputs:
     description: 'Optional repo namespace/name'
     default: ${{ github.repository }}
 outputs:
-  namespace: ${{ steps.info.outputs.namespace }}
-  collection_name: ${{ steps.info.outputs.collection_name }}
+  namespace:
+    value: ${{ steps.info.outputs.namespace }}
+  collection_name:
+    value: ${{ steps.info.outputs.collection_name }}
 
 runs:
   using: "composite"
