--- a/.github/workflows/reusable-molecule.yml
+++ b/.github/workflows/reusable-molecule.yml
@@ -85,7 +85,7 @@ jobs:
           SERVER: raw.githubusercontent.com
         uses: ./workflows/.github/actions/ansiblecollectioninfo
         with:
-          ref: ${{ github.sha }}
+          targeted_branch: ${{ github.sha }}
           filename: ${{ inputs.filename }}
 
       - name: Set working directory
