use molecule-plugins

--- a/.github/workflows/reusable-molecule.yml
+++ b/.github/workflows/reusable-molecule.yml
@@ -56,7 +56,7 @@ jobs:
       - name: Install Ansible
         uses: ./workflows/.github/actions/installansible
         with:
-          extra_packages: 'molecule_podman,molecule'
+          extra_packages: 'molecule-plugins[podman],molecule'
           ref: dev
 
       - name: Download the collection artifact
