--- a/.github/workflows/ci-ci.yml
+++ b/.github/workflows/ci-ci.yml
@@ -100,6 +100,7 @@ jobs:
     with:
       targeted_branch: ${{ needs.selectbranch.outputs.ref }}
       filename: local-ci-0.1.0.tar.gz
+      target: rocky9
 
   allsuccess:
     if: success() || failure()
