--- a/.github/workflows/ci-ci.yml
+++ b/.github/workflows/ci-ci.yml
@@ -101,7 +101,7 @@ jobs:
       targeted_branch: ${{ needs.selectbranch.outputs.ref }}
       filename: local-ci-0.1.0.tar.gz
       hostname: ci-system
-      image: docker.io/ubuntu:22.04
+      target: ubuntu22
 
   allsuccess:
     if: success() || failure()
