--- a/.github/workflows/reusable-molecule.yml
+++ b/.github/workflows/reusable-molecule.yml
@@ -56,13 +56,13 @@ jobs:
         with:
           repository: mafalb/workflows
           path: workflows
-          ref: f-ansiblecollection
+          ref: ${{ inputs.targeted_branch }}
 
       - name: Install Ansible
         uses: ./workflows/.github/actions/installansible
         with:
           extra_packages: 'molecule-plugins[podman],molecule'
-          ref: dev
+          ref: ${{ inputs.targeted_branch }}
           python_version: ${{ inputs.python_version }}
 
       - name: Download the collection artifact
