use dev branch for now. how to handle main vs. master?

--- a/.github/actions/installansible/action.yml
+++ b/.github/actions/installansible/action.yml
@@ -42,7 +42,7 @@ runs:
     # We use the stable branch
     - name: Checkout mafalb.ansible - we need it for tests
       env:
-        REF: ${{ inputs.ref }}
+        REF: dev  # FIX
       shell: bash
       working-directory: ${{ github.workspace }}
       run: ansible-galaxy collection install git+${{ github.server_url }}/mafalb/ansible-collection-ansible.git,"$REF" -p collections
