--- a/.github/workflows/reusable-ansiblecollection.yml
+++ b/.github/workflows/reusable-ansiblecollection.yml
@@ -116,7 +116,7 @@ jobs:
           SERVER: raw.githubusercontent.com
         uses: ./workflows/.github/actions/ansiblecollectioninfo
         with:
-          targeted_action: ${{ github.sha }}
+          targeted_branch: ${{ github.sha }}
           filename: ${{ inputs.filename }}
 
       - name: Set working directory
