--- a/.github/workflows/ci-ci.yml
+++ b/.github/workflows/ci-ci.yml
@@ -53,6 +53,7 @@ jobs:
         with:
           targeted_branch: ${{ needs.selectbranch.outputs.ref }}
           repository: mafalb/ansible-collection-ansible
+          python_version: 3.11
       - name: Assertions
         run: |
           test "$collection_name" = "ansible"
